--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.6.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE")
     }
 }
 
@@ -25,13 +25,20 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-jersey:+")
-    compile("org.glassfish.jersey.containers:jersey-container-servlet:+")
-    compile 'org.glassfish.jersey.inject:jersey-hk2:+'
-    compile("org.glassfish.jersey.media:jersey-media-json-jackson:+")
-    compile("com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:+")
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.3.0.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jersey', version: '1.3.0.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '1.3.0.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.3.0.RELEASE'
+    /*compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.24'
+
+    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.26'
+
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.24'*/
+
+    compile("com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.2.3")
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.6.0'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.2.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.2.2.Final'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2.1'
 
